# IoT-BST-Node-Manager

./: .gitignore  readme.md
inc/: node_manager.h
sama5/: CMakeLists.txt  build.sh  buildEnv.cmake
src/: node_manager.c
